@@ -14,3 +14,4 @@
 - PIP-58 Dodano obsługę wyjątków javascript oraz poprawiono linki do pobranych issue w GUI
 - PIP-64 PIP-65 Naprawiono zapisywanie ustawień, dodano zasób walidujący konfigurację
 - PIP-65 Refactoring
+- PIP-66 Zmieniono pole project
